<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_wrap"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/single_place_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place_title"
                style="@style/textViewPlace"
                android:layout_width="match_parent"
                android:text="@string/place_title_text_view"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Place title"
                android:textColor="@color/colorPrimaryDark"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_wrap"
                android:layout_marginRight="@dimen/normal_wrap"
                android:elevation="@dimen/normal_wrap">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/place_main_image_view"
                        android:layout_width="180dp"
                        android:layout_height="240dp"
                        android:layout_margin="@dimen/small_wrap"
                        android:layout_marginRight="@dimen/normal_large"
                        android:background="@color/colorGray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_wrap"
                        android:layout_toRightOf="@id/place_main_image_view"
                        android:orientation="vertical">

                        <TextView
                            style="@style/textPlaceDetailTextView"
                            android:text="@string/coordinates" />

                        <TextView
                            android:id="@+id/place_coordinates_detail"
                            style="@style/textViewPlace"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:layout_marginBottom="@dimen/normal_large"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="@dimen/normal_large"
                            android:layout_marginRight="@dimen/small_wrap"
                            android:layout_marginTop="@dimen/small_wrap"
                            android:background="@color/colorAccent" />

                        <TextView
                            style="@style/textPlaceDetailTextView"
                            android:text="@string/rating" />

                        <TextView
                            android:id="@+id/place_rating_detail"
                            style="@style/textPlaceDetailTextView" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="@dimen/normal_large"
                            android:layout_marginRight="@dimen/small_wrap"
                            android:layout_marginTop="@dimen/small_wrap"
                            android:background="@color/colorAccent" />

                        <TextView
                            style="@style/textPlaceDetailTextView"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/place_category_detail"
                            style="@style/textPlaceDetailTextView" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/normal_wrap"
                android:layout_marginRight="@dimen/normal_wrap"
                android:layout_marginTop="@dimen/normal_large"
                android:elevation="@dimen/normal_wrap">

                <TextView
                    android:id="@+id/place_description_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/normal_large"
                    android:textSize="18sp"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="@dimen/normal_large"
        android:src="@drawable/ic_edit_24dp"
        app:layout_anchor="@id/scroll_layout"
        app:layout_anchorGravity="bottom|right"
        android:background="@color/colorAccent"/>

</android.support.design.widget.CoordinatorLayout>